# Qbech32

./: CMakeLists.txt  Config.cmake.in  README.md  qbech32.cpp
.github/workflows/: build-actions.yml  build-test-install.yml
include/encoding/: qbech32.hpp
src/: bech32.cpp  bech32.h  iota_addr.cpp  iota_addr.h  segwit_addr.cpp  segwit_addr.h
tests/: CMakeLists.txt  tests.cpp
